--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <main class="memory-game">
       <div class="card" data-card="bowser">
-          <img class="card-front" src="./img/bowser.jpg" alt="Face da carta">
+          <img class="card-front" src="./img/bowser.png" alt="Face da carta">
           <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="luigi">
@@ -57,7 +57,7 @@
           <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="yoshi">
-          <img class="card-front" src="./img/yoshi.png" alt="Face da carta">
+        	<img class="card-front" src="./img/yoshi.png" alt="Face da carta">
           <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
     </main>
