--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="bowser">
-          <img class="card-front" src="./img/bowser.jpg" alt="Face da carta">
+          <img class="card-front" src="./img/bowser.png" alt="Face da carta">
           <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="luigi">
