--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
           <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
     </main>
+    <audio src="sound/flip.wav" preload="auto" id="flipCardSound"></audio>  
   </body>
 </html>
