--- a/index.html
+++ b/index.html
@@ -13,54 +13,59 @@
   <body>
     <main class="memory-game">
       <div class="card" data-card="bowser">
-          <img class="card-front" src="./img/bowser.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/bowser.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="luigi">
-          <img class="card-front" src="./img/luigi.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/luigi.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="mario">
-          <img class="card-front" src="./img/mario.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/mario.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="peach">
-          <img class="card-front" src="./img/peach.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/peach.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="toad">
-          <img class="card-front" src="./img/toad.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/toad.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="yoshi">
-          <img class="card-front" src="./img/yoshi.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/yoshi.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="bowser">
-          <img class="card-front" src="./img/bowser.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/bowser.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="luigi">
-          <img class="card-front" src="./img/luigi.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/luigi.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="mario">
-          <img class="card-front" src="./img/mario.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/mario.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="peach">
-          <img class="card-front" src="./img/peach.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/peach.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="toad">
-          <img class="card-front" src="./img/toad.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/toad.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
       <div class="card" data-card="yoshi">
-        	<img class="card-front" src="./img/yoshi.png" alt="Face da carta">
-          <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <img class="card-front" src="./img/yoshi.png" alt="Face da carta">
+        <img class="card-back" src="./img/box.png" alt="Verso da carta">
       </div>
     </main>
+    <div class="hud">
+			<div class="group">
+        <p class="scoreboard">Tries: <span id="tries">0</span>
+			</div>
+    </div>
     <audio src="sound/flip.wav" preload="auto" id="flipCardSound"></audio>  
   </body>
 </html>
